footer margin alignment mismatch fixed

--- a/style.css
+++ b/style.css
@@ -1671,6 +1671,8 @@ footer .container {
     footer {
         width: 100%;
         height: 309px;
+        margin-top: 0px;
+
     }
 
     footer .container {
